chore: adds github workflow

--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -9,15 +9,21 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container:
-      image: python:3.10-buster
+    strategy:
+      matrix:
+        python-version: ["3.9"]
+
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
+        shell: bash
         run: make install
       - name: Check linting errors
+        shell: bash
         run: make lint
       - name: Check types
+        shell: bash
         run: make typing
       - name: Run tests
+        shell: bash
         run: make test
